---
title: "2. Participants & Work Plan"
---
erDiagram
    users {
        bigint user_id PK
        varchar userid UK
        varchar username
        varchar userRole
    }
    tb_infra_master {
        bigint infra_id PK
        varchar sys_nm
    }
    sw_pjt {
        bigint proj_id PK
        varchar proj_name
        varchar sys_nm_en
    }
    tb_contract_participant {
        int participant_id PK
        bigint proj_id FK
        bigint user_id FK
        varchar role_type
        varchar tech_grade
        varchar task_desc
        boolean is_site_rep
        int sort_order
    }
    tb_work_plan {
        int plan_id PK
        bigint infra_id FK
        varchar plan_type
        bigint assignee_id FK
        bigint parent_plan_id FK
        varchar title
        date start_date
        varchar status
    }
    sw_pjt ||--o{ tb_contract_participant : "has participants"
    users ||--o{ tb_contract_participant : "joins"
    tb_infra_master ||--o{ tb_work_plan : "has"
    users ||--o{ tb_work_plan : "assigned"
    tb_work_plan ||--o{ tb_work_plan : "parent/child"
